@startuml

title __MECHANICALEMPIRE's Class Diagram__\n

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.mechanicalEmpire {
        class gamesource.battleState.character.enemy.mechanicalEmpire.EliteRobot {
            + EliteRobot()
            + enemyAction()
            + startTurn()
            + updateHints()
            # $()
            # attack()
            # attack2()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.mechanicalEmpire {
        class gamesource.battleState.character.enemy.mechanicalEmpire.RampageRobot {
            + RampageRobot()
            + enemyAction()
            + startTurn()
            + updateHints()
            # attack()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.mechanicalEmpire {
        class gamesource.battleState.character.enemy.mechanicalEmpire.Robot {
            + Robot()
            + enemyAction()
            + startTurn()
            + updateHints()
            # attack()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.mechanicalEmpire {
        class gamesource.battleState.character.enemy.mechanicalEmpire.SteamRobot {
            + SteamRobot()
            + enemyAction()
            + startTurn()
            + updateHints()
            # attack()
            # attack2()
            # attack3()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.mechanicalEmpire {
        class gamesource.battleState.character.enemy.mechanicalEmpire.StrongRobot {
            + StrongRobot()
            + enemyAction()
            + startTurn()
            + updateHints()
            # attack()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  gamesource.battleState.character.enemy.mechanicalEmpire.EliteRobot -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.mechanicalEmpire.RampageRobot -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.mechanicalEmpire.Robot -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.mechanicalEmpire.SteamRobot -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.mechanicalEmpire.StrongRobot -up-|> gamesource.battleState.character.Enemy




@enduml
